--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,17 @@
                 </li>
             </ul>
         </div>
-
+<div class="email-container block">
+    <b class="join">Подпишитесь на рассылку</b>
+    <form class="form-footer">
+        <input class="footer-input" type="email" name="mail" placeholder="E-mail" id="mail" />
+        <button class="button primary" type="submit">Подписаться
+            <svg class="icons" width="24" height="24">
+                <use href="./images/icons.svg/sprite.svg#icon-send"></use>
+            </svg>
+        </button>
+    </form>
+</div>
     </div>
 </footer>
 
