--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <label class="form-field">
                 <span class="form-label">Имя</span>    
                 <input type="text" class="form-input" name="name"  />
-                <svg class="icons-form" width="12" height="12">
+                <svg class="icons-form" width="18" height="18">
                     <use href="./images/icons.svg/sprite.svg#icon-person-black"></use>
                 </svg>
                 </label>
@@ -395,7 +395,7 @@
                 <label class="form-field">
                 <span class="form-label"> Телефон </span>
                 <input type="tel" class="form-input" name="tel" />
-                <svg class="icons-form" width="12" height="12">
+                <svg class="icons-form" width="18" height="18">
                     <use href="./images/icons.svg/sprite.svg#icon-phone-black"></use>
                 </svg>
                 </label>
@@ -404,7 +404,7 @@
                 <label class="form-field">
                 <span class="form-label">Почта</span> 
                 <input type="email" class="form-input" name="mail" />
-                <svg class="icons-form" width="12" height="12">
+                <svg class="icons-form" width="18" height="18">
                     <use href="./images/icons.svg/sprite.svg#icon-email-black"></use>
                 </svg>  
                 </label>
@@ -417,7 +417,8 @@
                 <textarea class="form-comment" name="comment" cols="30" rows="3" 
                 placeholder="Введите текст"></textarea>
                 </label>
-                <label class="form-field">
+                
+                <label class="form-checkbox">
                 <input class="checkbox" type="checkbox" name="policy" />
                 <span class="icon-checkbox"></span>
                 <span>Соглашаюсь с рассылкой и принимаю</span> <a href="">Условия договора</a> 
